bk_ida/gobmkida/c3/sgfStartVariant
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfStartVariant/src/sgf/sgfnode.c:1128:12: error: expected expression
*( _OWORD *)&result->child = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfStartVariant/src/sgf/sgfnode.c:1128:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->child = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfStartVariant/src/sgf/sgfnode.c:1129:12: error: expected expression
*( _OWORD *)&result->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfStartVariant/src/sgf/sgfnode.c:1129:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->props = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/sgfStartVariant/src/obj/4/sgfnode.o] Error 1
